--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Twittler</title>
   </head>
   <body>
+    <h1>Twittler Ya!</h1>
     <main>
-      <h1>Twittler Ya!</h1>
       <div class = "tweet"></div>
     </main>
     <script>
@@ -18,6 +18,7 @@
         //$body.html('');
           $main = $('main');
           var index = streams.home.length - 1;
+          var numTweet = streams.home.length;
           while(index >= 0){
             var tweet = streams.home[index];
             var $tweet = $('<div class = "tweet"></div>');
@@ -25,20 +26,17 @@
             $tweet.appendTo($main);
             index -= 1;
           }
-          var numTweet
-          setInterval(function(){
-            numTweet = streams.home.length;
+          var update = setInterval(function(){
             var index = streams.home.length - 1;
-            while(index >= 0){
+            while(index >= numTweet){
               var tweet = streams.home[index];
               var $tweet = $('<div class = "tweet"></div>');
               $tweet.text('@' + tweet.user + ': ' + tweet.message);
-              $tweet.appendTo($main);
+              $tweet.prependTo($main);
               index -= 1;
-          }}
-            , 5000)
-
-        // update(numTweet);
+          } numTweet = streams.home.length;
+        }
+            , 1000)
       });
 
     </script>
